# CostumeExpansionFW

./: .gitignore  BACKLOG_2026-07-13.md  CEF_API_DESIGN.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CostumeExpansionFW.ini  CostumeFW_Boxes_KID.ini  CostumeFW_KID.ini  LICENSE  LOG_REFERENCE_EN.md  LOG_REFERENCE_JA.md  NPC_SUPPORT_IMPL.md  NPC_SUPPORT_PLAN.md  NPC_SUPPORT_TESTING.md  NPC_SUPPORT_TESTING_EN.md  PCH.h  README.md  README_NPC.txt  README_VR.txt  SMF_RMSS_INVESTIGATION_2026-07-12.md  THIRD-PARTY-NOTICES.md  build.cmd  plugin.cpp  vcpkg-configuration.json  vcpkg.json
fsmp_patches/: 0001-external-node-api-entrypoints-v4.0.0.patch  README.md
package_assets/: CostumeFW_NPC.esp
package_assets/meshes/CostumeFW/XML/: Pub05_f_physics_r2.xml
papyrus/: CFW_Native.psc  CostumeFW_MCM.psc
src/: BodyMorph.cpp  BodyMorph.h  BoxStore.cpp  BoxStore.h  Commands.cpp  Commands.h  Config.h  Cosave.cpp  Cosave.h  LoreBox.cpp  LoreBox.h  NifCarrierBridge.cpp  Offsets.h  Papyrus.cpp  Papyrus.h  Preset.cpp  Preset.h  PublishStore.cpp  PublishStore.h  SkinRebind.cpp  SkinRebind.h  SmfUI.cpp  SmfUI.h  UiOps.h  logger.h
src/nifcarrier/: NifCarrierCore.cpp  NifCarrierCore.h
src/skee/: IPluginInterface.h
tests/nifcarrier/: npc_persist_empty_manifest.json  published_empty_manifest.json
tools/: build_npc_addon.ps1  gen_pub_placeholders.ps1  package.ps1  package_npc_addon.ps1  package_vr_patch.ps1
tools/espmerge/: Program.cs  espmerge.csproj
tools/nifcarrier/: Program.cs  README.md  TESTING.md  nifcarrier.csproj  sync_carriers.cmd
tools/nifcarrier_cli/: main.cpp
